<resources>
    <string name="app_name">Contacts</string>
    <string name="task_title">Contacts</string>
    <string name="task_description">WE TEST DIALOG</string>
    <string name="add_task">ADD NEW TASK</string>
    <string-array name="images">
        <item>drawable 1</item>
        <item>drawable 2</item>
        <item>drawable 3</item>
    </string-array>
    <string name="item_selected_msg">Selected Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_question">Do you want to delete this contact?</string>
    <string name="dialog_confirm">YES</string>
    <string name="dialog_cancel">NO</string>
    <string name="delete_dialog_tag">Contact has deleted successfully!</string>
    <string name="long_click_msg">You done long click!</string>
    <string name="delete_cancel_msg">You cancelled delete attempt!</string>
    <string name="call_cancelled">Call cancelled</string>
    <string name="retry_call">Retry call</string>
    <string name="try_call">Calling...</string>
    <string name="retry_msg">Retry delete?</string>
    <string name="Surname">Surname</string>
    <string name="Name">Name</string>
    <string name="Date">Date</string>
    <string name="Phone_number">Phone number</string>
    <string name="ADD">ADD</string>
    <string name="default_name">Jan </string>
    <string name="default_surname">Kowalski</string>
    <string name="default_data">31/12/1979</string>
    <string name="default_number">987654321</string>
    <string name="call_msg">Call this person?</string>
    <string name="valid_phone">Invalid phone number!</string>
    <string name="valid_data">Invalid date format!</string>
    <string name="no_valid">Invalid format of date and phone number!</string>

</resources>
